--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "homepage": "https://nielsclerinx.github.io/index.html",
     "preview": "vite preview"
   },
   "dependencies": {
